--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,3 @@
-<div class="wrapper">
-  <app-header></app-header>
-<h1>App main</h1>
+<app-header></app-header>
+Home
 <app-footer></app-footer>
-</div>
