--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,3 @@
-<p>header works!</p>
+<span class="material-symbols-outlined">menu</span>
+<span class="title">Home</span>
+<span class="material-symbols-outlined">settings</span>
