--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -1,22 +1,27 @@
-html, body {
-    height: 100%;
+*, *::after, *::before{
+    box-sizing: border-box;
+}
+html,
+body {
+  height: 100%;
 }
 
 p {
-    margin: 0;
+  margin: 0;
 }
 
 body {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  font-family: $ff;
 }
 
 router-outlet {
-    display: none;
+  display: none;
 }
 
 app-root {
-    flex-grow: 1;
-    display: grid;
-    grid-template-rows: auto 1fr auto;
+  flex-grow: 1;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
